# LimitlessBackupManager

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-cleanup.sh  build-debug.sh  build-release.sh  build-tests.sh  clean-build.sh  cm-debug.cmake  cm-release.cmake  cm-tests.cmake  run-app.sh  run-tests.sh
dependencies/: install-asiolib-locally.sh  install-crow-locally.sh  install-cxxopts-locally.sh  install-googletest-locally.sh  install-nlohmann-json-locally.sh  install-nodejs-locally.sh  install-spdtest-locally.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  _CMakeLists.txt  crow-server-settings.cpp  crow-server-settings.hpp  cxxopts-settings.cpp  main.cpp  spdlog-settings.cpp  spdlog-settings.hpp
src/core/: CMakeLists-tmp.txt  CMakeLists.txt
src/core/file_copy/: CMakeLists.txt  FileCopy.cpp  FileCopy.hpp
src/core/file_manager/: CMakeLists.txt  CopyDirectoryContents.cpp  CopyDirectoryContents.hpp  FileManager.cpp  FileManager.hpp  IFileManager.hpp
tests/: CMakeLists.txt  FileCopyTests.cpp  StdToolsTests.cpp  sample_tests.cpp
tests/_test_utils/: CMakeLists.txt  TestUtils.cpp  TestUtils.hpp
tests/file_copy_tests/: CMakeLists.txt  FileCopyTests.cpp
tests/file_manager_tests/: CMakeLists.txt  FileManagerTests.cpp
tests/std_tools_tests/: CMakeLists.txt
tests/test_utils_tests/: CMakeLists.txt  TestUtilsTests.cpp
ui/: app.js
ui/app00/: index.html
ui/app01/: README.md  package-lock.json  package.json
ui/app01/src/: App.vue
